View Issue Details

IDProjectCategoryView StatusLast Update
0026085Open CASCADEOCCT:Samplespublic2015-05-14 16:36
ReporterskiAssigned Tobugmaster  
PriorityurgentSeveritymajor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026085: Shape is not displayed in wireframe mode with activated RayTracing
DescriptionIn OCCT samples any shape could not be displayed in wireframe mode with activated RayTracing in 3d viewer.

In OCCT 6.8.0 it works.
Steps To ReproduceRun any occt sample (for example ImportExport)
Import any shape
Make sure that wireframe mode is ON
Turn ON RayTracing
-> Shape will be erased from 3d viewer

The same situation can be reproduced from draw:
pload ALL
vinit
box a 10 10 10
vdisplay a
vfit
vraytrace 1
-> Shape will be erased from 3d viewer
TagsNo tags attached.
Test case number

Activities

git

2015-04-16 11:43

administrator   ~0039826

Branch CR26085 has been created by dbp.

SHA-1: 28f91d37ec57706c8e740dde9c360f2d3dfaf5e4


Detailed log of new commits:

Author: dbp
Date: Thu Apr 16 11:43:34 2015 +0300

    0026085: Shape is not displayed in wireframe mode with activated RayTracing

dbp

2015-04-16 11:44

developer   ~0039827

Dear kgv,

please review the patch in branch CR26085.

kgv

2015-04-16 11:52

developer   ~0039831

Please test the patch.

git

2015-05-14 16:36

administrator   ~0041095

Branch CR26085 has been deleted by inv.

SHA-1: 28f91d37ec57706c8e740dde9c360f2d3dfaf5e4

Related Changesets

occt: master 5682a029

2015-04-16 08:43:34

dbp


Committer: bugmaster Details Diff
0026085: Shape is not displayed in wireframe mode with activated RayTracing Affected Issues
0026085
mod - src/OpenGl/OpenGl_View_2.cxx Diff File

Issue History

Date Modified Username Field Change
2015-04-16 10:12 ski New Issue
2015-04-16 10:12 ski Assigned To => kgv
2015-04-16 10:47 kgv Assigned To kgv => dbp
2015-04-16 10:47 kgv Status new => assigned
2015-04-16 11:06 abv Priority normal => urgent
2015-04-16 11:43 git Note Added: 0039826
2015-04-16 11:44 dbp Note Added: 0039827
2015-04-16 11:44 dbp Assigned To dbp => kgv
2015-04-16 11:44 dbp Status assigned => resolved
2015-04-16 11:52 kgv Note Added: 0039831
2015-04-16 11:52 kgv Assigned To kgv => bugmaster
2015-04-16 11:52 kgv Status resolved => reviewed
2015-04-16 12:04 bugmaster Assigned To bugmaster => ski
2015-04-16 12:37 bugmaster Assigned To ski => apv
2015-04-16 14:33 mkv Assigned To apv => mkv
2015-04-17 15:40 bugmaster Changeset attached => occt master 5682a029
2015-04-17 15:40 bugmaster Assigned To mkv => bugmaster
2015-04-17 15:40 bugmaster Status reviewed => verified
2015-04-17 15:40 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:36 git Note Added: 0041095