0026085: Shape is not displayed in wireframe mode with activated RayTracing